# pydicom-seg

./: pyproject.toml
pydicom_seg/: reader.py  segmentation_dataset.py  template.py
tests/: test_reader.py
