[tool.poetry]
name = "pydicom-seg-rb"
version = "1.0.0"
description = "Python package for DICOM-SEG medical segmentation file reading and writing"
authors = ["Pritam Rungta <59230352+pritamrungta@users.noreply.github.com>"]
homepage = "https://github.com/pritamrungta/pydicom-seg"
readme = "README.md"
license = "MIT"
include = [
    "pydicom_seg/schemas/seg-schema.json",
    "pydicom_seg/schemas/common-schema.json"
]

[tool.poetry.dependencies]
python = ">=3.8"
pydicom = ">=1.4.2"
SimpleITK = ">=1.2.5"
numpy = ">=1.18.0"
jsonschema = ">=3.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=5.3.2"
coverage = ">=5.0.1"
sphinx = ">=2.3.1"
sphinx_rtd_theme = ">=0.4.3"
mypy = ">=1.0.0"
pre-commit = ">=2.10.1"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
